enrollment and progress syncing done
